Fix icons and text alignment

--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -18,7 +18,6 @@
 }
 .ci-soundcloud::before { 
   content: "\0053"; 
-  vertical-align: -.2em;
 }
 .ci-ytmusic::before { 
   content: "\0059"; 
